--- a/Lab1.html
+++ b/Lab1.html
@@ -22,20 +22,22 @@
     <body>
         <div class="heading">
             <div class="text-center">
-            <h1>My Favourite Restaurants</h1>
+                <h1>My Favourite Restaurants</h1>
             </div>
         </div>
         <div class="text-center">
-        <p>I have travelled to 10 countries and have explored restaurants and street food from each destination. Here is
-            a list of my 5 favourite restaurants! <br>
-            <img src="https://pyxis.nymag.com/v1/imgs/26b/60e/18bc6c2b1f07b946c0f29a7b93464477b0-26-bourdain-obama-vietnam.rsquare.w400.jpg"
-                alt="Anthony Bourdain and Barack Obama eating in Vietnam"> <br>
+            <p>I have travelled to 10 countries and have explored restaurants and street food from each destination.
+                Here is
+                a list of my 5 favourite restaurants! <br>
+                <img src="https://pyxis.nymag.com/v1/imgs/26b/60e/18bc6c2b1f07b946c0f29a7b93464477b0-26-bourdain-obama-vietnam.rsquare.w400.jpg"
+                    alt="Anthony Bourdain and Barack Obama eating in Vietnam"> <br>
         </div>
         <div class="text-center">
-        <a class="btn btn-primary" target="_blank" href="Lab 1/map.geojson">GeoJSON</a>
+            <a class="btn btn-primary" target="_blank" href="Github/map.geojson">GeoJSON</a>
+            <!--ts does not work-->
         </div>
         </p>
-<!--I found an interesting format for a site from the bootstrap website called Accordian-->
+        <!--I found an interesting format for a site from the bootstrap website called Accordian-->
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
